# L-type-12

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  build.sh  guidelines.md  l_type_groupe_12_2020.cbp  ltypeDB
SRD/: main.tex
UML/Class_diagram/Game_server/: class_diagramm_client_server.uxf  class_diagramm_command.uxf  class_diagramm_game.uxf  class_diagramm_game_logic.uxf
UML/Class_diagram/UML_Database/: class_diagram_database.uxf
UML/Class_diagram/UML_Menu/: class_diagram_menu.uxf  class_diagram_menu_SFML.uxf  class_diagram_menu_ncurses.uxf
UML/Sequence_diagram/: game_client_server_sequence.uxf  game_sequence.uxf  game_server_sequence.uxf  menu_sequence.uxf  uml_sequence_online.uxf
UML/Use_case_diagram/: use_case_connexion.uxf  use_case_friends_System.uxf  use_case_game.uxf  use_case_menu.uxf
levels/: AZERTU.txt  aaa.txt  campaign_0.txt  campaign_1.txt  campaign_2.txt  campaign_3.txt
sprites/animations/Kirby_cut/: anim_cut_kirby_1.png.bk
src/: main.cpp
src/Database/: Database.cpp  Database.hpp  FriendRequest.hpp  User.cpp  User.hpp
src/Game/: Application.cpp  Application.hpp  Bonus.cpp  Bonus.hpp  Command.cpp  Command.hpp  Connection.cpp  Connection.hpp  GameSettings.cpp  GameSettings.hpp  GameState.cpp  GameState.hpp  HUD.cpp  HUD.hpp  Input.cpp  Input.hpp  Lootable.cpp  Lootable.hpp  PlayerShip.cpp  PlayerShip.hpp  Projectile.cpp  Projectile.hpp  Vector2D.hpp  Vector2DServer.cpp  Vector2DServer.hpp
src/Game/Abstract/: AppInstance.hpp  Boss.cpp  Boss.hpp  Destructable.hpp  EnemyShip.cpp  EnemyShip.hpp  EntityType.hpp  GameEntity.cpp  GameEntity.hpp  Ship.cpp  Ship.hpp
src/Game/Client/: Drawable.cpp  Drawable.hpp  GameClient.cpp  GameClient.hpp  GameplayWindow.cpp  GameplayWindow.hpp  Sound.cpp  Sound.hpp  Window.cpp  Window.hpp
src/Game/Client/Ncurses/: Background.cpp  Background.hpp  TerminalWindow.cpp  TerminalWindow.hpp
src/Game/Client/SFML/: GraphicalWindow.cpp  GraphicalWindow.hpp  ParticleHandler.cpp  ParticleHandler.hpp
src/Game/EnemyType/: AsteroidBase.cpp  AsteroidBase.hpp  BattleShip.cpp  BattleShip.hpp  BossPoulpe.cpp  BossPoulpe.hpp  Cruiser.cpp  Cruiser.hpp  Dragon.cpp  Dragon.hpp  Enterprise.cpp  Enterprise.hpp  Escorter.cpp  Escorter.hpp  LaserGun.cpp  LaserGun.hpp  Obstacle.cpp  Obstacle.hpp  Swarmling.cpp  Swarmling.hpp
src/Game/Server/: CollisionResolver.cpp  CollisionResolver.hpp  GameInstance.cpp  GameInstance.hpp  GameServer.cpp  GameServer.hpp  GameSession.cpp  GameSession.hpp  Level.cpp  Level.hpp  Spawner.cpp  Spawner.hpp
src/Menu/: BaseMenu.cpp  BaseMenu.hpp  BaseMenuNcurses.cpp  BaseMenuNcurses.hpp  BaseMenuSFML.cpp  BaseMenuSFML.hpp  MenuInfo.cpp  MenuInfo.hpp  WindowMenu.cpp  WindowMenu.hpp
src/Menu/SubMenus/: EndMenu.cpp  EndMenu.hpp  FriendProfileMenu.cpp  FriendProfileMenu.hpp  LeaderboardMenu.cpp  LeaderboardMenu.hpp  MyProfileMenu.cpp  MyProfileMenu.hpp  RoomMenu.cpp  RoomMenu.hpp  SocialMenu.cpp  SocialMenu.hpp
src/Menu/SubMenus/ConnectionMenu/: ConnectionInfo.cpp  ConnectionInfo.hpp
src/Menu/SubMenus/ConnectionMenu/Ncurses/: ConnectionInfoNcurses.cpp  ConnectionInfoNcurses.hpp  ConnectionMenuNcurses.cpp  ConnectionMenuNcurses.hpp  LoginMenuNcurses.cpp  LoginMenuNcurses.hpp  NewPasswordMenuNcurses.cpp  NewPasswordMenuNcurses.hpp  QuestionVerificationMenuNcurses.cpp  QuestionVerificationMenuNcurses.hpp  RegisterMenuNcurses.cpp  RegisterMenuNcurses.hpp  UserNameVerificationMenuNcurses.cpp  UserNameVerificationMenuNcurses.hpp
src/Menu/SubMenus/ConnectionMenu/SFML/: ConnectionInfoSFML.cpp  ConnectionInfoSFML.hpp  ConnectionMenuSFML.cpp  ConnectionMenuSFML.hpp  LoginMenuSFML.cpp  LoginMenuSFML.hpp  NewPasswordMenuSFML.cpp  NewPasswordMenuSFML.hpp  QuestionVerificationMenuSFML.cpp  QuestionVerificationMenuSFML.hpp  RegisterMenuSFML.cpp  RegisterMenuSFML.hpp  UserNameVerificationMenuSFML.cpp  UserNameVerificationMenuSFML.hpp
src/Menu/SubMenus/LevelMenu/: LevelChoiceSettingsMenu.cpp  LevelChoiceSettingsMenu.hpp  LevelCreateMenu.cpp  LevelCreateMenu.hpp  LevelMainMenu.cpp  LevelMainMenu.hpp
src/Menu/SubMenus/Ncurses/: EndMenuNcurses.cpp  EndMenuNcurses.hpp  ErrorMenuNcurses.cpp  ErrorMenuNcurses.hpp  FriendProfileMenuNcurses.cpp  FriendProfileMenuNcurses.hpp  LeaderboardMenuNcurses.cpp  LeaderboardMenuNcurses.hpp  LevelFriendMenuNcurses.cpp  LevelFriendMenuNcurses.hpp  MainMenuNcurses.cpp  MainMenuNcurses.hpp  MyProfileMenuNcurses.cpp  MyProfileMenuNcurses.hpp  ProfileMenuNcurses.cpp  ProfileMenuNcurses.hpp  RoomMenuNcurses.cpp  RoomMenuNcurses.hpp  SocialMenuNcurses.cpp  SocialMenuNcurses.hpp
src/Menu/SubMenus/SFML/: EndMenuSFML.cpp  EndMenuSFML.hpp  ErrorMenuSFML.cpp  ErrorMenuSFML.hpp  FriendProfileMenuSFML.cpp  FriendProfileMenuSFML.hpp  LeaderboardMenuSFML.cpp  LeaderboardMenuSFML.hpp  LevelFriendMenuSFML.cpp  LevelFriendMenuSFML.hpp  MainMenuSFML.cpp  MainMenuSFML.hpp  MyProfileMenuSFML.cpp  MyProfileMenuSFML.hpp  RoomMenuSFML.cpp  RoomMenuSFML.hpp  SocialMenuSFML.cpp  SocialMenuSFML.hpp
src/Menu/Window/: Border.cpp  Border.hpp  Button.cpp  Button.hpp  MenuMaker.cpp  MenuMaker.hpp  PosObj.cpp  PosObj.hpp  Rectangle.hpp  TextInput.cpp  TextInput.hpp  Win.cpp  Win.hpp  Window.cpp  Window.hpp
src/Menu/Window_SFML/: Background.cpp  Background.hpp  Button.cpp  Button.hpp  SpriteSimple.cpp  SpriteSimple.hpp  Stars.cpp  Stars.hpp  Texte.cpp  Texte.hpp  TexteField.cpp  TexteField.hpp
src/Utils/: ColorsSFML.hpp  Constants.hpp  DebugLogger.hpp  ThreadSafeQueue.hpp  Time.cpp  Time.hpp
